# clinical-safeguards

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: python-app.yml
clinical_safeguard/api/: app.py  router.py
clinical_safeguard/config/: __init__.py  hf_inicializer.py  settings.py
clinical_safeguard/core/: __init__.py  base.py  pipeline.py
clinical_safeguard/models/: __init__.py  enums.py  response.py
clinical_safeguard/stages/: __init__.py  deterministic.py  semantic.py
conf/: config.yaml
conf/app/: default.yaml
conf/pipeline/: clinical.yaml  default.yaml  full.yaml
resources/: bypass_patterns.yaml  keywords_crisis.yaml  keywords_malign.yaml
src/api/: app.py  inspect_router.py  router.py
src/config/: hf_inicializer.py  settings.py
src/core/: __init__.py  base.py  exceptions.py  pipeline.py
src/models/: __init__.py  enums.py  request.py  response.py
src/stages/: __init__.py  attack_detection.py  deterministic.py  semantic.py
tests/: conftest.py  test_api.py  test_app.py  test_attack_detection.py  test_contracts.py  test_deterministic.py  test_hf_init.py  test_inspect.py  test_pipeline.py  test_pipeline_integration.py  test_semantic.py
