[project]
name = "clinical-safeguards"
version = "0.3.0"
description = "A FastAPI application for clinical safeguards, providing endpoints for text processing and analysis."
authors = [
    { name = "José Manuel Ramírez Sánchez at Universidade de Vigo", email = "jmramirez@gts.uvigo.es" },
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "flashtext>=2.7",
    "transformers>=4.40",
    "torch>=2.2",
    "pyyaml>=6.0",
    "hydra-core>=1.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27", # for FastAPI TestClient
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__init__.py"]

[tool.setuptools.packages.find]
exclude = ["resources*"]
